add zone features and tag autocompletion